# aetherguard

./: .gitignore  AUTHORS  COPYING.README  INSTALL.md  NEWS  QUICKSTART.md  README.md  SECURITY.md  THANKS  meson.build  version.py
bash_completion.d/: meson.build  tinc
doc/: CONNECTIVITY  CONTROL  NETWORKING  PROTOCOL  SECURITY2  aetherguard.8.in  aetherguard.texi  meson.build  tinc-gui.8.in  tinc.conf.5.in  tincd.8.in
doc/sample-config/: rsa_key.priv  tinc.conf
src/: address_cache.c  address_cache.h  aetherguardctl.c  aetherguardctl.h  aetherguardd.c  autoconnect.c  autoconnect.h  buffer.c  buffer.h  cipher.c  cipher.h  compression.h  conf.c  conf.h  conf_net.h  connection.c  connection.h  console.h  control.c  control.h  control_common.h  crypto.h  device.h  digest.c  digest.h  dropin.c  dropin.h  dummy_device.c  ecdh.h  ecdsa.h  ecdsagen.h  edge.c  edge.h  ethernet.h  event.c  event.h  event_select.c  fd_device.c  fs.c  fs.h  (+81 more)
src/bsd/: device.c  event.c  meson.build
src/bsd/darwin/: meson.build
src/ed25519/: ecdh.c  ecdsa.c  ecdsagen.c  fixedint.h
src/gcrypt/: asn1.h  cipher.c  cipher.h  digest.c  digest.h  pem.c  pem.h  prf.c  rsa.c  rsa.h  rsagen.c
src/linux/: device.c  event.c  meson.build  uml_device.c
src/nolegacy/: crypto.c  prf.c
src/openssl/: cipher.c  cipher.h  crypto.c  digest.c  digest.h  prf.c  rsa.c  rsagen.c
src/solaris/: device.c  meson.build
src/windows/: common.h  device.c  event.c  meson.build
systemd/: aetherguard.service.in  aetherguard@.service.in  meson.build
test/integration/: address_cache.py  algorithms.py  basic.py  (+32 more)
(+23 files in other folders)
